2025-02-18  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/ctags-menu.el (ctags-menu--read-existing-file): New function.
	(ctags-menu--read-file): Allow reading non-existing file names.

2025-02-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not enable `dynamic-highlight'.

2025-02-13  Zhengyi Fu  <i@fuzy.me>

	* init.el: Move vc configuration to toplevel.

	* init.el (toggle-map): Bind c to
	+visual-fill-column/toggle-visual-fill-and-center.
	(+visual-fill-column/toggle-visual-fill-and-center): New command.
	(meow-setup): Use `meow-motion-define-key' instead of
	`meow-motion-overwrite-define-key'.

2025-02-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (magit): Enable icons in status buffer.

2025-01-24  Zhengyi Fu  <i@fuzy.me>

	* packages.el (visual-fill-column): Add new package.
	* init.el (gptel-default-mode): Set to `org-mode'.
	(+gptel-mode-h): New function.

	* init.el (toggle-map): Bind "c" to `olivetti-mode'.

	* packages.el: Reorganize package.el.

2025-01-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (org): Use valign and ftable to align tables in
	org-mode.
	* package.el: Add package valign and ftable.

	* site-lisp/pp-posframe.el (pp-posframe-yank): Remove text
	properties from inserting into buffers.

	* init.el (+custom-faces): Change cursor colors.

2025-01-21  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/eshell-extras.el (eshell/rg): New eshell command.

	* init.el (+vc/dir-here): New command.  Bound to `C-c v .'.
	(+custom-faces): Use underline to highlight incorrect whitespaces.
	Change cursor color to cyan.

2025-01-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (markdown-mode): Enable visual-line-mode.

	* early-init.el (default-frame-alist): Do not set
	`alpha-background' any more.

	* site-lisp/rust-docs.el (rust-docs--get-file):
	(rust-docs--base-path):
	(rust-docs--shr-tag-pre):
	(rust-docs--render):
	* site-lisp/gtkdoc.el (gtkdoc--parse-xml):
	(gtkdoc--extract-symbols):
	(gtkdoc--shr-tag-pre):
	(gtkdoc--render):