@@ -1,0 +1,6 @@
+((ctags-menu
+  ("--exclude=" ".git")
+  "--recurse"
+  ("--languages=" "C" "C++" "CMake")
+  "--extras=*" "--fields=*" "--roles-all=*")
+ (gptel-menu "g*quick-answer*"))
